Fixed minor alignment issues of player buttons.

--- a/monstercat-dark.user.css
+++ b/monstercat-dark.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Monstercat Dark
 @namespace      github.com/openstyles/stylus
-@version        1.2.1
+@version        1.2.2
 @description    A dark theme for Monstercat
 @homepageURL    https://github.com/DayvidKnows/Monstercat-Dark
 @updateURL      https://raw.githubusercontent.com/DayvidKnows/Monstercat-Dark/master/monstercat-dark.user.css
@@ -450,7 +450,7 @@
 	}
 
 	/* Full width searchbar */
-	header {
+	body > header {
 		display: flex;
 		flex-direction: column;
 	}
@@ -467,6 +467,7 @@
 
 	.navigation > .nav-item {
 		display: flex;
+		align-items: flex-end;
 	}
 
 	.controls,
@@ -475,25 +476,27 @@
 		margin: 0;
 		margin-left: auto;
 		flex-wrap: nowrap;
+		align-items: flex-end;
 	}
 
-	.controls > button:not(.volume-toggle),
-	.controls.playing > button:not(.volume-toggle) {
-		display: flex;
-		justify-content: center;
+	.controls > button,
+	.controls.playing > button {
+		flex: auto;
+		padding-right: 2.5px;
+		padding-left: 2.5px;
 	}
 
 	.global-search {
 		display: flex;
 		flex-grow: 1;
+		align-items: flex-end;
 	}
 
 	.global-search form {
 		display: flex;
 		flex-grow: 1;
+		align-items: flex-end;
 	}
-
-
 
 	.global-search input[type="text"] {
 		max-width: none;
@@ -506,7 +509,6 @@
 		.col-xs-hidden {
 			display: none;
 		}
-
 
 		.controls.playing {
 			flex-wrap: wrap;
